--- a/scripts/scan/ps_configs.yml
+++ b/scripts/scan/ps_configs.yml
@@ -2,10 +2,10 @@ evolve:
 
     run_configs: 
         # Approximate 
-        - 'srp-timing-gpu-k20'
-        - 'exact-timing-gpu-k20' 
-        - 'float32-timing-gpu-k20'  
-        - 'f32-srp-timing-gpu-k20'
+        # - 'srp-timing-gpu-k20'
+        # - 'exact-timing-gpu-k20' 
+        # - 'float32-timing-gpu-k20'  
+        # - 'f32-srp-timing-gpu-k20'
 
         - 'srp-timing-gpu-p40'
         - 'exact-timing-gpu-p40' 
@@ -17,7 +17,7 @@ evolve:
         # Approximate
         'f32-srp-timing-gpu-p40': {
             'exe': ['PS_main.py'],
-            'particles': [8000000],
+            'particles': [2000000],
             'bunches': [21],  # 192
 
             'slices': [256],
@@ -41,13 +41,13 @@ evolve:
             'partition': ['computes_gpu_p40'],
             'cores_per_cpu': [8],
 
-            'repeats': 3
+            'repeats': 1
         },
 
 
         'f32-rds-timing-gpu-p40': {
             'exe': ['PS_main.py'],
-            'particles': [8000000],
+            'particles': [2000000],
             'bunches': [21],  # 192
 
             'slices': [256],
@@ -71,13 +71,13 @@ evolve:
             'partition': ['computes_gpu_p40'],
             'cores_per_cpu': [8],
 
-            'repeats': 3
+            'repeats': 1
         },
 
 
         'srp-timing-gpu-p40': {
             'exe': ['PS_main.py'],
-            'particles': [8000000],
+            'particles': [2000000],
             'bunches': [21],  # 192
 
             'slices': [256],
@@ -101,13 +101,13 @@ evolve:
             'partition': ['computes_gpu_p40'],
             'cores_per_cpu': [8],
 
-            'repeats': 3
+            'repeats': 1
         },
 
 
         'rds-timing-gpu-p40': {
             'exe': ['PS_main.py'],
-            'particles': [8000000],
+            'particles': [2000000],
             'bunches': [21],  # 192
 
             'slices': [256],
@@ -131,12 +131,12 @@ evolve:
             'partition': ['computes_gpu_p40'],
             'cores_per_cpu': [8],
 
-            'repeats': 3
+            'repeats': 1
         },
 
         'exact-timing-gpu-p40': {
             'exe': ['PS_main.py'],
-            'particles': [8000000],
+            'particles': [2000000],
             'bunches': [21],  # 192
 
             'slices': [256],
@@ -161,13 +161,13 @@ evolve:
             'partition': ['computes_gpu_p40'],
             'cores_per_cpu': [8],
 
-            'repeats': 3
+            'repeats': 1
         },
 
 
         'float32-timing-gpu-p40': {
             'exe': ['PS_main.py'],
-            'particles': [8000000],
+            'particles': [2000000],
             'bunches': [21],  # 192
 
             'slices': [256],
@@ -192,7 +192,7 @@ evolve:
             'partition': ['computes_gpu_p40'],
             'cores_per_cpu': [8],
 
-            'repeats': 3
+            'repeats': 1
         },
 
         # Approximate K20
