--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,10 @@
 /__doc/_build/
 /__doc/build/
 /__EXAMPLES/output_files/
-/__BENCHMARKS/debug.log
-/__BENCHMARKS/OTFB.png
-/__BENCHMARKS/2x40_2x80.hd5
-/__BENCHMARKS/fig/
-/__BENCHMARKS/animations/
+/__BENCHMARKS/
 *.DS_Store
 .idea
+
+blond.egg-info/
+build/
+dist/
