--- a/scripts/scan/sps_configs.yml
+++ b/scripts/scan/sps_configs.yml
@@ -1331,9 +1331,15 @@ slurm:
 
 local: 
     run_configs: 
+        - 'srp-monitor'
+        - 'rds-monitor'
+        - 'exact'
+        - 'float32'
+        - 'f32-srp-monitor'
+        - 'f32-rds-monitor'
         # - 'precision-monitor'
         # - 'precision-seed'
-        - 'precision-timing'
+        # - 'precision-timing'
 
         # Intermediate stages
         # - 'approx0-interm'
@@ -1357,6 +1363,157 @@ local:
         # - 'lb-tp-approx2-weak-scaling'
 
     configs: {
+        'f32-srp-monitor': {
+            'exe': ['SPS_main.py'],
+            'particles': [10000000],
+            'bunches': [1],  # 192
+            'slices': [1408],
+            'turns': [40000],
+            'monitor': [100],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [3],
+            'approx': [1],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'workers': [1],
+            'omp': [10],
+            'mpi': ['mpich3'],
+            'time': [180],
+            'gpu': [0],
+            'repeats': 1
+        },
+
+        'f32-rds-monitor': {
+            'exe': ['SPS_main.py'],
+            'particles': [10000000],
+            'bunches': [1],  # 192
+            'slices': [1408],
+            'turns': [40000],
+            'monitor': [100],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [2],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'gpu': [0],
+            'timing': ['timing'],
+            'workers': [4, 8],
+            'omp': [4, 2],
+            'mpi': ['mpich3'],
+            'time': [180],
+            'repeats': 1
+        },
+
+        'srp-monitor': {
+            'exe': ['SPS_main.py'],
+            'particles': [10000000],
+            'bunches': [1],  # 192
+            'slices': [1408],
+            'turns': [40000],
+            'monitor': [100],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['double'],
+            'withtp': [0],
+            'reduce': [3],
+            'approx': [1],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'timing': ['timing'],
+            'workers': [1],
+            'omp': [10],
+            'mpi': ['mpich3'],
+            'time': [180],
+            'repeats': 1
+        },
+
+        'rds-monitor': {
+            'exe': ['SPS_main.py'],
+            'particles': [10000000],
+            'bunches': [1],  # 192
+            'slices': [1408],
+            'turns': [40000],
+            'monitor': [100],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['double'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [2],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'gpu': [0],
+            'timing': ['timing'],
+            'workers': [4, 8],
+            'omp': [4, 2],
+            'mpi': ['mpich3'],
+            'time': [180],
+            'repeats': 1
+        },
+
+        'exact': {
+            'exe': ['SPS_main.py'],
+            'particles': [10000000],
+            'bunches': [1],  # 192
+            'slices': [1408],
+            'turns': [40000],
+            'monitor': [100],
+            'seed': [0, 1, 2],
+            'mtw': [0],
+            'precision': ['double'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [0],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'gpu': [0],
+            'timing': ['timing'],
+            'workers': [1],
+            'omp': [10],
+            'mpi': ['mpich3'],
+            'time': [180],
+            'repeats': 1
+        },
+
+        'float32': {
+            'exe': ['SPS_main.py'],
+            'particles': [10000000],
+            'bunches': [1],  # 192
+            'slices': [1408],
+            'turns': [40000],
+            'monitor': [100],
+            'seed': [0],
+            'mtw': [0],
+            'precision': ['single'],
+            'withtp': [0],
+            'reduce': [1],
+            'approx': [0],
+            'log': [1],
+            'loadbalance': ['reportonly,,,,'],
+            'artificialdelay': ['off'],
+            'gpu': [0],
+            'timing': ['timing'],
+            'workers': [1],
+            'omp': [10],
+            'mpi': ['mpich3'],
+            'time': [180],
+            'repeats': 1
+        },
+
+
+
         'precision-monitor': {
             'exe': ['SPS_main.py'],
             'particles': [1000000],
