bug fix in scan script

--- a/scripts/scan/sps_configs.yml
+++ b/scripts/scan/sps_configs.yml
@@ -1434,6 +1434,7 @@ local:
             'omp': [10],
             'mpi': ['mpich3'],
             'time': [180],
+            'gpu': [0],
             'repeats': 1
         },
 
